--- a/oceanus-all/pom.xml
+++ b/oceanus-all/pom.xml
@@ -15,12 +15,12 @@
 		<repository>
 			<id>releases</id>
 			<name>Internal Releases</name>
-			<url>http://10.58.120.19:8058/nexus/content/repositories/releases</url>
+			<url>http://192.168.2.228.8081/nexus/content/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
 			<id>Snapshots</id>
 			<name>Internal Snapshots</name>
-			<url>http://10.58.120.19:8058/nexus/content/repositories/snapshots</url>
+			<url>http://192.168.2.228.8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 	
